fixed contrast

--- a/components/gridItem/gridItem.module.css
+++ b/components/gridItem/gridItem.module.css
@@ -39,7 +39,7 @@
     position: absolute;
     padding: 0.5rem;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     color: var(--secondary-bg-color);
     font-family: var(--secondary-font);
     font-size: 0.8rem;
